ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vrspace-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: endpoints-ip
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    type: endpoints-app
spec:
  tls:
  - hosts:
    - vrserver.endpoints.metaverse-363005.cloud.goog
    secretName: vrspace-tls
  rules:
  - host: vrserver.endpoints.metaverse-363005.cloud.goog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: vrspace-service
              port:
                number: 80
